Sync README with current implementation